--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <main>
   <div class="container py-4">
 
-    <<div class="row align-items-md-stretch">
+    <div class="row align-items-md-stretch">
       <div class="col-md-6">
         <div class="h-100 p-5 text-bg-dark rounded-3">
           <h2>Welcome to my about me!</h2>
@@ -30,6 +30,7 @@
           </a>
         </div>
       </div>
+      <br>
     <div class="row align-items-md-stretch">
       <div class="col-md-6">
         <div class="h-100 p-5 text-bg-dark rounded-3">
@@ -40,6 +41,7 @@
           </a>
         </div>
       </div>
+      <br>
       <div class="row align-items-md-stretch">
       <div class="col-md-6">
         <div class="h-100 p-5 text-bg-dark rounded-3">
