--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
             </div>
             <div class="content-container w3-margin-top-2">
               <!--HOME SECTION-->
+    
               <div id="home" class="home w3-container w3-margin-top-4 w3-cursive">
+                <p><badge>NEW</badge>Change Log:<br> Everything!!!</p>
                 <p style="font-style: italic; font-size:x-large;">"The mind is the limit. When you face your struggles, you overcome them."</p>
                 <h1>Eclipse</h2>
                 <h2>Web designer and coder</h3>
@@ -87,6 +89,7 @@
                   I believe mindfulness in the workplace is key to success.
                   I lives out through my interests in coding and drawing. 
                   I is currently working as a CEO and Founder of <a href="https://code-assist.ca">Code Assist</a>, and <a href="https://eclipsethedev.github.io/TheUnknownClient">The Unknown Client!</a> and is always interested in a challenge. Reach out on my discord <a href="https://dsc.gg/officialeclipse">[Here]<a> to connect!
+                  I am also Transgender [Male to Female] and Pansexual
                 </p>
               </div>
     
