--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <!--HOME SECTION-->
     
               <div id="home" class="home w3-container w3-margin-top-4 w3-cursive">
-                <p><badge>NEW</badge>Change Log:<br> Everything!!!</p>
+                <p><badge>NEW</badge><br> Everything!!!</p>
                 <p style="font-style: italic; font-size:x-large;">"The mind is the limit. When you face your struggles, you overcome them."</p>
                 <h1>Eclipse</h2>
                 <h2>Web designer and coder</h3>
