--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width">
-        <meta name="description" content="Hi I am Eclipse! I love to game, code, draw and more! I am Transgender and Pansexual. If you have any questions DM me on discord! And now I have nothin else to add, so ye..">
+        <meta property="og:description" content="Hi I am Eclipse! I love to game, code, draw and more! I am Transgender and Pansexual. If you have any questions DM me on discord! And now I have nothin else to add, so ye..">
         <meta property="og:title" content="Eclipse">
-        <meta property="og:description" content="Made with love <3">
         <meta property="og:image" content="https://cdn.discordapp.com/avatars/950445998885445653/ad199402808be0e50d9bdf4421bc663b.png">
         <meta property="og:image:alt" content="This was supposed to be a png pic but ur browser/app doesn't support it :c">
         <meta property="theme-color" content="#0c3fcc">
@@ -80,16 +79,16 @@
                 <h2 class="w3-border-bottom w3-border-amber" style="border-width: 3px !important;">A BIT ABOUT ME</h2>
                 <p class="w3-margin-top-2"> 
                   NOTE:
-                    When ever I say "I", "us", "we" or "" I am reffering to myself
+                    Whenever I say "I", "us", or "we" I am reffering to myself
                 </p>
                 <p class=""> 
                   
                 </p>
                 <p class=""> 
-                  I believe mindfulness in the workplace is key to success.
-                  I lives out through my interests in coding and drawing. 
-                  I is currently working as a CEO and Founder of <a href="https://code-assist.ca">Code Assist</a>, and <a href="https://eclipsethedev.github.io/TheUnknownClient">The Unknown Client!</a> and is always interested in a challenge. Reach out on my discord <a href="https://dsc.gg/officialeclipse">[Here]<a> to connect!
-                  I am also Transgender [Male to Female] and Pansexual
+                  I believe mindfulness in the workplace is key to success. <br>
+                  I live out through my interests in coding and drawing. <br>
+                  I am currently working as a CEO and Founder of <a href="https://code-assist.ca">Code Assist</a>, and <a href="https://eclipsethedev.github.io/TheUnknownClient">The Unknown Client!</a> and is always interested in a challenge. Reach out on my discord <a href="https://dsc.gg/officialeclipse">[Here]<a> to connect!
+                  <br>I am also Transgender [Male to Female] and Pansexual
                 </p>
               </div>
     
