--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <img src="https://cdn.discordapp.com/avatars/950445998885445653/ad199402808be0e50d9bdf4421bc663b.png" class="w3-circle w3-border w3-border-sand" style="border-width: 3px !important;"/>
             <!--SCIAL NETWORK BUTTONS-->
             <div class="links w3-margin-top w3-padding-small">
-              <a class="icon-link w3-text-sand w3-hover-text-amber" href="#facebook" target="_blank">
+              <a class="icon-link w3-text-sand w3-hover-text-amber" href="https://www.facebook.com/eclipsewastaken" target="_blank">
                   <i data-feather="facebook"></i>
               </a>
               <a class="icon-link w3-text-sand w3-hover-text-amber" href="#instagram" target="_blank">
