--- a/index.html
+++ b/index.html
@@ -100,8 +100,10 @@
                   <!--EMPLOYMENT HISTORY SECTION-->
                   <h3 class="w3-border-amber">MY EMPLOYMENT HISTORY</h3>
                   <div class="">
+                      Self-Employed
                   </div>
                   <div class="">
+                      
                   </div>
                   <div class="">
                   </div>
