--- a/index.html
+++ b/index.html
@@ -77,10 +77,7 @@
               <!--ABOUT SECTION-->
               <div id="about" class="w3-container w3-margin-top-20-percent w3-cursive w3-large">
                 <h2 class="w3-border-bottom w3-border-amber" style="border-width: 3px !important;">A BIT ABOUT ME</h2>
-                <p class="w3-margin-top-2"> 
-                  NOTE:
-                    Whenever I say "I", "us", or "we" I am reffering to myself
-                </p>
+                <h4><badge>NOTE</badge><br>When I say "I", "we", "me", "my", "myself" and more I am reffering to myself or other people</h4>
                 <p class=""> 
                   
                 </p>
