--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta name="viewport" content="width=device-width">
         <meta property="og:description" content="Hi I am Eclipse! I love to game, code, draw and more! I am Transgender and Pansexual. If you have any questions DM me on discord! And now I have nothin else to add, so ye..">
         <meta property="og:title" content="Eclipse">
-        <meta property="og:image" content="https://cdn.discordapp.com/avatars/950445998885445653/ad199402808be0e50d9bdf4421bc663b.png">
+        <meta property="og:image" content="icon.png">
         <meta property="og:image:alt" content="This was supposed to be a png pic but ur browser/app doesn't support it :c">
         <meta property="theme-color" content="#0c3fcc">
         <link rel="stylesheet" href="styles.css" data-n-g="">
@@ -17,7 +17,7 @@
         <!--Montserrat font-->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css" />
-        <link rel="icon" href="https://cdn.discordapp.com/avatars/950445998885445653/ad199402808be0e50d9bdf4421bc663b.png">
+        <link rel="icon" href="icon.png">
         <script src="https://unpkg.com/feather-icons@4.28.0/dist/feather.min.js"></script>
     </head>
     <body>   
@@ -36,7 +36,7 @@
           <!-- SOCIAL SECTION -->
           <section class="image-section w3-quarter w3-fixed w3-padding-small">
             <!--IMAGE/AVATAR-->
-            <img src="https://cdn.discordapp.com/avatars/950445998885445653/ad199402808be0e50d9bdf4421bc663b.png" class="w3-circle w3-border w3-border-sand" style="border-width: 3px !important;"/>
+            <img src="icon" class="w3-circle w3-border w3-border-sand" style="border-width: 3px !important;"/>
             <!--SCIAL NETWORK BUTTONS-->
             <div class="links w3-margin-top w3-padding-small">
               <a class="icon-link w3-text-sand w3-hover-text-amber" href="https://www.facebook.com/eclipsewastaken" target="_blank">
