--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
               </a>
               <a class="icon-link w3-text-sand w3-hover-text-amber" href="#twitter" target="_blank">
                  <i data-feather="twitter"></i>
+              <a class="icon-link w3-text-sand w3-hover-text-amber" href="https://www.youtube.com/@eclipseledev" target="_blank">
+                 <i data-feather="youtube"></i>
               </a>
-              <a class="icon-link w3-text-sand w3-hover-text-amber" href="#linkedin" target="_blank">
+              </a>
+              <a class="icon-link w3-text-sand w3-hover-text-amber" href="https://dsc.gg/officialeclipse" target="_blank">
                  <i data-feather="phone"></i>
               </a>
             </div>
