--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <h2 class="w3-border-bottom w3-border-amber" style="border-width: 3px !important;">MY CONTACT DETAILS</h3>
                 <div class="w3-margin-top-2" style="font-weight: 500;">
                   <p>Name: Eclipse</p>
-                  <p>Discord: EclipseTheDev They/Them#2230</p>
+                  <p>Discord: Eclipse#6969<br>  If I cannot be contacted, click <a href="mailto:eclipseledev@gmail.com">here</a></p>
                 </div>
               </div>
     
