--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
             <!--IMAGE/AVATAR-->
             <img src="icon" class="w3-circle w3-border w3-border-sand" style="border-width: 3px !important;"/>
             </div>
-            <!--CV DOWNLOAD BUTTON-->
           </section>
     
           <!--CV CONTENT SECTION-->
@@ -54,7 +53,7 @@
     
               <div id="home" class="home w3-container w3-margin-top-4 w3-cursive">
                 <p><badge>NEW</badge><br> Everything!!!</p>
-                <p style="font-style: italic; font-size:x-large;">"The mind is the limit. When you face your struggles, you overcome them."</p>
+                <p style="font-style: italic; font-size:x-large;">“If I cannot do great things, I can do small things in a great way.” ~ Martin Luther King Jr.</p>
                 <h1>Oakley</h2>
                 <h2>Programmer</h3>
                 <p></p>
@@ -67,7 +66,7 @@
                 <div class="w3-margin-top-2" style="font-weight: 500;">
                   <p>Name: Oakley</p>
                   <p>Online name: Eclipse</p>
-                  <p>Discord: Eclipse#6969<br>  If I cannot be contacted, click <a href="mailto:eclipseledev@gmail.com">here</a></p>
+                  <p>Discord: Eclipse#6900<br>  If I cannot be contacted, click <a href="mailto:eclipseledev@gmail.com">here</a></p>
                   <p>Phone: <a href="tel:+1-226-385-6311"> +1 (226) 385-6311</a> | Free for iPhones and iPads</p>
                 </div>
               </div>
