--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <!-- SOCIAL SECTION -->
           <section class="image-section w3-quarter w3-fixed w3-padding-small">
             <!--IMAGE/AVATAR-->
-            <img src="icon" class="w3-circle w3-border w3-border-sand" style="border-width: 3px !important;"/>
+            <img src="icon.png" class="w3-circle w3-border w3-border-sand" style="border-width: 3px !important;"/>
             </div>
           </section>
     
