--- a/index.html
+++ b/index.html
@@ -35,16 +35,14 @@
           <!-- SOCIAL SECTION -->
           <section class="image-section w3-quarter w3-fixed w3-padding-small">
             <!--IMAGE/AVATAR-->
-            <img src="icon.png" class="w3-square w3-border w3-border-sand" style="border-width: 3px !important;"/>
+            <img src="icon.png" class="w3-square w3-border w3-border-amber" style="border-width: 3px !important;"/>
             </div>
             
                 <h2 class="w3-border-bottom w3-border-amber" style="border-width: 3px !important;">MY CONTACT DETAILS</h3>
-                <div class="w3-margin-top-2" style="font-weight: 500;">
                   <p>Name: Oakley</p>
                   <p>Online name: Eclipse</p>
                   <p>Discord: Eclipse#6900<br>  If I cannot be contacted, click <a href="mailto:eclipseledev@gmail.com">here</a></p>
                   <p>Phone: <a href="tel:+1-226-385-6311"> +1 (226) 385-6311</a> | Free for iPhones and iPads</p>
-              </div>
           </section>
     
           <!--CV CONTENT SECTION-->
