--- a/index.html
+++ b/index.html
@@ -36,13 +36,12 @@
           <section class="image-section w3-quarter w3-fixed w3-padding-small">
             <!--IMAGE/AVATAR-->
             <img src="icon.png" class="w3-square w3-border w3-border-amber" style="border-width: 3px !important;"/>
-            </div>
-            
-                <h2 class="w3-border-bottom w3-border-amber" style="border-width: 3px !important;">MY CONTACT DETAILS</h3>
+                <h2 class="w3-border-top w3-border-amber" style="border-width: 3px !important;">MY CONTACT DETAILS</h3>
                   <p>Name: Oakley</p>
                   <p>Online name: Eclipse</p>
                   <p>Discord: Eclipse#6900<br>  If I cannot be contacted, click <a href="mailto:eclipseledev@gmail.com">here</a></p>
                   <p>Phone: <a href="tel:+1-226-385-6311"> +1 (226) 385-6311</a> | Free for iPhones and iPads</p>
+            </div>
           </section>
     
           <!--CV CONTENT SECTION-->
