--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <!-- SOCIAL SECTION -->
           <section class="image-section w3-quarter w3-fixed w3-padding-small">
             <!--IMAGE/AVATAR-->
-            <img src="icon.png" class="w3-square w3-border w3-border-amber" style="border-width: 3px !important;"/>
+            <img src="icon.png"/>
             </div>
           </section>
     
