--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <a href="#resume" class="w3-bar-item w3-button w3-center w3-hover-none w3-border-white w3-bottombar w3-hover-border-green w3-hover-text-green" onclick="toggleNavigation()">RESUME</a>
           </div>
     
-          <!-- SOCIAL SECTION -->
+          <!-- CONTACT SECTION -->
           <section class="image-section w3-quarter w3-fixed w3-padding-small">
             <!--IMAGE/AVATAR-->
-            <img src="icon.png"/>
+            <img src="icon.png" class="image-section img"/>
             </div>
           </section>
     
