--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta property="og:image" content="icon.png">
         <meta property="og:image:alt" content="This was supposed to be a png pic but ur browser/app doesn't support it :c">
         <meta property="theme-color" content="#0c3fcc">
-        <link rel="stylesheet" href="styles.css" data-n-g="">
+        <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="index.js"></script>
         <meta charset="UTF-8" />
