--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <p>Online name: Eclipse</p>
                 <p>Discord: Eclipse#6900<br>  If I cannot be contacted, click <a href="mailto:eclipseledev@gmail.com">here</a></p>
                 <p>Phone: <a href="tel:+1-226-385-6311"> +1 (226) 385-6311</a> | Free for iPhones and iPads</p>
-                <p><badge>NEW</badge><br> Everything!!!</p>
+                <p><badge>NEW</badge><br>Added real info, Not just online stuff.</p>
                 <p style="font-style: italic; font-size:x-large;">“If I cannot do great things, I can do small things in a great way.” ~ Martin Luther King Jr.</p>
                 <h1>Oakley</h2>
                 <h2>Programmer</h3>
@@ -124,7 +124,7 @@
                <div class="w3-container w3-margin-top-2 w3-cursive">
                   <h3 class="w3-border-amber">WHY YOU SHOULD HIRE ME</h3>
                     <ul class="w3-ul" style="font-weight: 500;">
-                      <li>  I believe you should hire me because<br><badge>1)</badge> I am great with teamwork<br><badge>2)</badge></li>    
+                      <li>  I believe you should hire me because<br><badge>1)</badge> I am great with teamwork<br><badge>2) I give you information staight up. No sugar added.</badge></li>    
                </div>
             <!--FOOTER-->
             <footer class="w3-container w3-border-top w3-center w3-margin-top-4">
