--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
               <a href="#about" class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-green w3-hover-text-green w3-right w3-hide-small" style="border-width: 2px !important;" onclick="toggleNavigation()">ABOUT</a>
             </div>
             <div class="content-container w3-margin-top-2">
-              <!--HOME SECTION-->
+                <section class="image-section">
+                    <img src="icon.png" class="image-section img"></img>
+                </section>
+                <!--HOME SECTION-->
+                
                 
                 <div id="home" class="home w3-container w3-margin-top-4 w3-cursive">
                 <p>Name: Oakley</p>
