--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="content-container w3-margin-top-2">
                 <section class="image-section">
-                    <img src="icon.png" id="image-section img"></img>
+                    <img scr="icon.png" class="img-responsive" id="swoosh">
                 </section>
                 <!--HOME SECTION-->
                 
