--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
               <a href="#about" class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-green w3-hover-text-green w3-right w3-hide-small" style="border-width: 2px !important;" onclick="toggleNavigation()">ABOUT</a>
             </div>
             <div class="content-container w3-margin-top-2">
-                <section class="image-section">
-                    <img scr="icon.png" class="img-responsive" id="swoosh">
+                <section class="image-section" align="left">
+                    <img scr="icon.png" align="left">
                 </section>
                 <!--HOME SECTION-->
                 
