--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                <div class="w3-container w3-margin-top-2 w3-cursive">
                   <h3 class="w3-border-amber">WHY YOU SHOULD HIRE ME</h3>
                     <ul class="w3-ul" style="font-weight: 500;">
-                      <li>  I believe you should hire me because<br><badge>1)</badge> I am great with teamwork<br><badge>2) I give you information staight up. No sugar added.</badge></li>    
+                      <li>  I believe you should hire me because<br><badge>1)</badge> I am great with teamwork<br><badge>2)</badge> I give you information staight up. No sugar added.</li>    
                </div>
             <!--FOOTER-->
             <footer class="w3-container w3-border-top w3-center w3-margin-top-4">
