--- a/commissions/discord-bots/index.html
+++ b/commissions/discord-bots/index.html
@@ -1,11 +1,13 @@
 <html>
   <head>
     <title>Commissions - Discord bots | home/AboutMe/commisions/discord-bots/</title>
-  <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../styles.css">
+    <meta content="Commissions - Discord bots | home/AboutMe/commisions/discord-bots" property="og:title">
+    <meta content="A discord.js bot at your finger tips" property="og:description">
   </head>
   <body>
     <h1>Sorry about the messy CSS, I was in a rush lol</h1>
-    <h2></h2>
+    <h2>We will show you how to run it if you don't know how :)</h2>
     <details>
       <summary>$5 USD</summary>
       For $5 USD the bot would have a help centre, and basic member commands. | You can only get 1 with one purchase
@@ -14,8 +16,10 @@
       <summary>$10 USD</summary>
       For $10 USD the bot would have a help centre, a leveling system, member commands, and basic moderation commands. | You can only get 1 with one purchase
     </details>
+    <details>
       <summary>$15 USD</summary>
       For $15 USD the bot would have an advanced help centre, a leveling/economy system, advanced member commands and moderation commands. | You can only get 1 with one purchase
+    </details>
     <details>
       <summary>$20 USD</summary>
       For $20 USD the advanced bot would have an advanced help centre, an advanced leveling/economy system, advanced member commands, advanced moderation commands, a ticket/modmail system (they choose one or the other) and global commands (weather, covid, ect.) | You can only get 1 with one purchase
