--- a/commissions/discord-bots/index.html
+++ b/commissions/discord-bots/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Commissions - Discord bots | home/AboutMe/commisions/discord-bots/</title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <meta content="Commissions - Discord bots | home/AboutMe/commisions/discord-bots" property="og:title">
     <meta content="A discord.js bot at your finger tips" property="og:description">
   </head>
@@ -24,8 +24,10 @@
       <summary>$20 USD</summary>
       For $20 USD the advanced bot would have an advanced help centre, an advanced leveling/economy system, advanced member commands, advanced moderation commands, a ticket/modmail system (they choose one or the other) and global commands (weather, covid, ect.) | You can only get 1 with one purchase
     </details>
+    <details>
       <summary>$30 USD<summary>
       For $30 USD they could request 25 features they want the bot to have, and it would include a help centre, a leveling/economy system and global commands (weather, covid, ect.) | You can only get 1 with one purchase
+    </details>
     <details>
       <summary>$50 USD</summary>
       For $50 USD they would have a multi server bot, with all of the perks from the $20 one, but they would get togglable ticket AND modmail system for multipul Discord servers. | You can only get 2 with one purchase
