--- a/commissions/discord-bots/index.html
+++ b/commissions/discord-bots/index.html
@@ -25,7 +25,7 @@
       For $20 USD the advanced bot would have an advanced help centre, an advanced leveling/economy system, advanced member commands, advanced moderation commands, a ticket/modmail system (they choose one or the other) and global commands (weather, covid, ect.) | You can only get 1 with one purchase
     </details>
     <details>
-      <summary>$30 USD<summary>
+      <summary>$30 USD</summary>
       For $30 USD they could request 25 features they want the bot to have, and it would include a help centre, a leveling/economy system and global commands (weather, covid, ect.) | You can only get 1 with one purchase
     </details>
     <details>
