--- a/commissions/discord-bots/index.html
+++ b/commissions/discord-bots/index.html
@@ -1,40 +1,70 @@
 <html>
   <head>
-    <title>Commissions - Discord bots | home/AboutMe/commisions/discord-bots/</title>
-    <link rel="stylesheet" href="/styles.css">
-    <meta content="Commissions - Discord bots | home/AboutMe/commisions/discord-bots" property="og:title">
+
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Commissions - Discord bots</title>
+    <meta content="Commissions - Discord bots" property="og:title">
     <meta content="A discord.js bot at your finger tips" property="og:description">
-  </head>
-  <body> 
-    <h1>Sorry about the messy CSS, I was in a rush lol</h1>
-    <h2>We will show you how to run it if you don't know how :)</h2>
-    <details>
-      <summary>$5 USD</summary>
-      For $5 USD the bot would have a help centre, and basic member commands. | You can only get 1 with one purchase
-    </details>
-    <details>
-      <summary>$10 USD</summary>
-      For $10 USD the bot would have a help centre, a leveling system, member commands, and basic moderation commands. | You can only get 1 with one purchase
-    </details>
-    <details>
-      <summary>$15 USD</summary>
-      For $15 USD the bot would have an advanced help centre, a leveling/economy system, advanced member commands and moderation commands. | You can only get 1 with one purchase
-    </details>
-    <details>
-      <summary>$20 USD</summary>
-      For $20 USD the advanced bot would have an advanced help centre, an advanced leveling/economy system, advanced member commands, advanced moderation commands, a ticket/modmail system (they choose one or the other) and global commands (weather, covid, ect.) | You can only get 1 with one purchase
-    </details>
-    <details>
-      <summary>$30 USD</summary>
-      For $30 USD they could request 25 features they want the bot to have, and it would include a help centre, a leveling/economy system and global commands (weather, covid, ect.) | You can only get 1 with one purchase
-    </details>
-    <details>
-      <summary>$50 USD</summary>
-      For $50 USD they would have a multi server bot, with all of the perks from the $20 one, but they would get togglable ticket AND modmail system for multipul Discord servers. | You can only get 2 with one purchase
-    </details>
-    <details>
-      <summary>$99 USD</summary>
-      For $99 USD they would have a lifetime supply of discord bots, from 30 USD and below | You can get any amount
-    </details>
-  </body>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<style>
+
+</style>
+<body>
+  <header>
+    <h1>Bot Pricing</h1>
+  </header>
+
+  <section id="pricing">
+    <h2>Pricing</h2>
+    <div class="pricing-card">
+      <details>
+        <summary>$5 USD</summary>
+        <p>For $5 USD, the bot would have a help centre and basic member commands. You can only get 1 with one purchase.</p>
+      </details>
+    </div>
+    <div class="pricing-card">
+      <details>
+        <summary>$10 USD</summary>
+        <p>For $10 USD, the bot would have a help centre, a leveling system, member commands, and basic moderation commands. You can only get 1 with one purchase.</p>
+      </details>
+    </div>
+    <div class="pricing-card">
+      <details>
+        <summary>$15 USD</summary>
+        <p>For $15 USD, the bot would have an advanced help centre, a leveling/economy system, advanced member commands, and moderation commands. You can only get 1 with one purchase.</p>
+      </details>
+    </div>
+    <div class="pricing-card">
+      <details>
+        <summary>$20 USD</summary>
+        <p>For $20 USD, the advanced bot would have an advanced help centre, an advanced leveling/economy system, advanced member commands, advanced moderation commands, a ticket/modmail system (they choose one or the other), and global commands (weather, covid, etc.). You can only get 1 with one purchase.</p>
+      </details>
+    </div>
+    <div class="pricing-card">
+      <details>
+        <summary>$30 USD</summary>
+        <p>For $30 USD, they could request 25 features they want the bot to have, and it would include a help centre, a leveling/economy system, and global commands (weather, covid, etc.). You can only get 1 with one purchase.</p>
+      </details>
+    </div>
+    <div class="pricing-card">
+      <details>
+        <summary>$50 USD</summary>
+        <p>For $50 USD, they would have a multi-server bot with all the perks from the $20 one. They would get a togglable ticket AND modmail system for multiple Discord servers. You can only get 2 with one purchase.</p>
+      </details>
+    </div>
+    <div class="pricing-card">
+      <details>
+        <summary>$99 USD</summary>
+        <p>For $99 USD, they would have a lifetime supply of Discord bots from $30 and below. You can get any amount.</p>
+      </details>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2023 Catteleya | Code-Assist. All rights reserved.</p>
+  </footer>
+</body>
 </html>
