--- a/commissions/discord-bots/index.html
+++ b/commissions/discord-bots/index.html
@@ -1,8 +1,5 @@
-<html>
-  <head>
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Commissions - Discord bots</title>
     <meta content="Commissions - Discord bots" property="og:title">
