--- a/commissions/discord-bots/index.html
+++ b/commissions/discord-bots/index.html
@@ -16,6 +16,7 @@
 
   <section id="pricing">
     <h2>Pricing</h2>
+      <h2>Got the money? Message Catteleya#0001 on Discord!</h2>
     <div class="pricing-card">
       <details>
         <summary>$5 USD</summary>
