--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width">
-        <meta property="og:description" content="Hi I am Eclipse! I love to game, code, draw and more! I am Transgender and Pansexual. If you have any questions DM me on discord! And now I have nothin else to add, so ye..">
+        <meta property="og:description" content="Hi I am Catteleya! I love to game, code, draw and more! I am Transgender and Pansexual. If you have any questions DM me on discord! And now I have nothin else to add, so ye..">
         <meta property="og:title" content="Eclipse">
         <meta property="og:image" content="icon.png">
         <meta property="og:image:alt" content="This was supposed to be a png pic but ur browser/app doesn't support it :c">
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="index.js"></script>
         <meta charset="UTF-8" />
-        <title>Eclipse's About Me | Welcome!</title>
+        <title>Catteleya's About Me | Welcome!</title>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,6 +30,7 @@
           <div id="mobile-nav" class="w3-bar-block w3-hide w3-hide-large w3-hide-medium w3-sticky">
             <a href="#about" class="w3-bar-item w3-button w3-center w3-hover-none w3-border-white w3-bottombar w3-hover-border-green w3-hover-text-green" onclick="toggleNavigation()">ABOUT</a>
             <a href="#resume" class="w3-bar-item w3-button w3-center w3-hover-none w3-border-white w3-bottombar w3-hover-border-green w3-hover-text-green" onclick="toggleNavigation()">RESUME</a>
+            <a href="https://catteleya.code-assist.ca/commissions/" class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-green w3-hover-text-green w3-right w3-hide-small" style="border-width: 2px !important;">COMMISSIONS</a>
           </div>
     
           <!--CV CONTENT SECTION-->
@@ -38,6 +39,7 @@
             <div class="w3-container w3-padding-large w3-border-bottom w3-hide-small">
               <a href="#resume" class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-green w3-hover-text-green w3-right w3-hide-small" style="border-width: 2px !important;" onclick="toggleNavigation()">RESUME</a>
               <a href="#about" class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-green w3-hover-text-green w3-right w3-hide-small" style="border-width: 2px !important;" onclick="toggleNavigation()">ABOUT</a>
+              <a href="https://catteleya.code-assist.ca/commissions/" class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-green w3-hover-text-green w3-right w3-hide-small" style="border-width: 2px !important;">COMMISSIONS</a>
             </div>
             <div class="content-container w3-margin-top-2">
                     
