--- a/commissions/index.html
+++ b/commissions/index.html
@@ -11,11 +11,10 @@
 </style>
 <body>
   <header>
-    <h1>Bot Pricing <button onclick="toggleDarkMode()">Toggle Dark Mode</button></h1>
+    <h1>Commissions <button onclick="toggleDarkMode()">Toggle Dark Mode</button></h1>
   </header>
 
   <section id="pricing">
-    <h2>Pricing</h2>
       <h2>Got the money? Message Catteleya#0001 on Discord!</h2>
     <div class="pricing-card">
       <details>
