--- a/twitch/index.html
+++ b/twitch/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
   <title>Twitch</title>
-  <meta http-equiv="refresh" content="0; url=www.twitch.tv/eclipsethedev" />
+  <meta http-equiv="refresh" content="0; url=www.twitch.tv/catteleyathedev" />
 </head>
 </html>
