--- a/commissions/index.html
+++ b/commissions/index.html
@@ -21,7 +21,17 @@
         <summary>Discord bots</summary>
         <a href="https://catteleya.code-assist.ca/commissions/discord-bots/">Click me to go onto the Discord bots commission page!</a>
       </details>
+    <div class="pricing-card">
+      <details>
+        <summary>Minecraft Mods</summary>
+        <a href="https://catteleya.code-assist.ca/commissions/minecraft-mods/">Click me to go onto the Minecraft mods commission page!</a>
+      </details>
     </div>
+    <div class="pricing-card">
+      <details>
+        <summary>Website</summary>
+        <a href="https://catteleya.code-assist.ca/commissions/webpage-building/">Click me to go onto the website building commission page!</a>
+      </details>
   <footer>
     <p>&copy; 2023 Catteleya | Code-Assist. All rights reserved.</p>
   </footer>
