--- a/commissions/webpage-building/index.html
+++ b/commissions/webpage-building/index.html
@@ -38,7 +38,7 @@
     <div class="pricing-card">
       <details>
         <summary>$20 USD</summary>
-        <p>For $20 USD, The webpage will have advanced HTML, and CSS</p>
+        <p>For $20 USD, The webpage will have advanced HTML, advanced CSS, and JS</p>
       </details>
     </div>
     <div class="pricing-card">
