--- a/commissions/index.html
+++ b/commissions/index.html
@@ -21,6 +21,7 @@
         <summary>Discord bots</summary>
         <a href="https://catteleya.code-assist.ca/commissions/discord-bots/">Click me to go onto the Discord bots commission page!</a>
       </details>
+    </div>
     <div class="pricing-card">
       <details>
         <summary>Minecraft Mods</summary>
@@ -32,6 +33,7 @@
         <summary>Website</summary>
         <a href="https://catteleya.code-assist.ca/commissions/webpage-building/">Click me to go onto the website building commission page!</a>
       </details>
+    </div>
   <footer>
     <p>&copy; 2023 Catteleya | Code-Assist. All rights reserved.</p>
   </footer>
