--- a/commissions/minecraft-mods/index.html
+++ b/commissions/minecraft-mods/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
   <header>
-    <h1>Bot Pricing <button onclick="toggleDarkMode()">Toggle Dark Mode</button></h1>
+    <h1>Minecraft Mods Pricing <button onclick="toggleDarkMode()">Toggle Dark Mode</button></h1>
   </header>
 
   <section id="pricing">
