--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
                 <img scr="icon.png">
                 <p>Name: Oakley</p>
                 <p>Online name: Eclipse</p>
-                <p>Discord: Eclipse#6900<br>  If I cannot be contacted, click <a href="mailto:eclipseledev@gmail.com">here</a></p>
-                <p>Phone: <a href="tel:+1-226-385-6311"> +1 (226) 385-6311</a> | Free for iPhones and iPads</p>
-                <p><badge>NEW</badge><br>Added real info, Not just online stuff.</p>
+                <p>Discord: catteleya<br>  If I cannot be contacted, click <a href="mailto:catteleyathedev@gmail.com">here</a></p>
                 <p style="font-style: italic; font-size:x-large;">“If I cannot do great things, I can do small things in a great way.” ~ Martin Luther King Jr.</p>
                 <h1>Oakley</h2>
                 <h2>Programmer</h3>
@@ -133,7 +131,7 @@
                </div>
             <!--FOOTER-->
             <footer class="w3-container w3-border-top w3-center w3-margin-top-4">
-              <p>© 2023 - Eclipse</p>
+              <p>© 2023 - Catteleya</p>
             </footer>
     
             <!--END OF CV SECTION-->
