--- a/404.html
+++ b/404.html
@@ -2,7 +2,11 @@
   <head>
     <title>404 - Page Not Found</title>
   </head>
+  <style>
+    * { 
+      background-image: url('./404.png');
+    }
+  </style>
   <body>
-    <div style="background-image: url('./404.png');">
   </body>
 </html>
