--- a/404.html
+++ b/404.html
@@ -4,7 +4,9 @@
   </head>
   <style>
     * { 
-      background-image: url('./404.png');
+      background-image:url('./404.png');
+      background-repeat:no-repeat;
+      background-size:cover;
     }
   </style>
   <body>
